sample_manifest (30).yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'topologyviewer-pr-1147-prod'
  namespace: 'topologyviewer-dev'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: JSESSIONID
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    project: 'topologyviewer-ui'
    branch: 'PR-1147'
    commit: '9433ce8'
    role: java
    environment: prod
spec:
  rules:
    - host: topologyviewer-ui-prod-pr-1147.kubeodc-test.corp.intranet
      http:
        paths:
          - path: /
            backend:
              serviceName: 'topologyviewer-pr-1147-prod'
              servicePort: 8080
  tls:
    - hosts:
      - 'java-pr-1147-topologyviewer-ui-prod.kubeodc-test.corp.intranet'
      secretName: managed-tls-secret
---
---
apiVersion: v1
kind: Service
metadata:
  name: 'topologyviewer-pr-1147-prod'
  namespace: 'topologyviewer-dev'
  labels:
    project: 'topologyviewer-ui'
    branch: 'PR-1147'
    commit: '9433ce8'
    role: java
    environment: prod
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    project: 'topologyviewer-ui'
    branch: 'PR-1147'
    commit: '9433ce8'
    role: java
    environment: prod
  type: ClusterIP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'topologyviewer-pr-1147-prod'
  labels:
    project: 'topologyviewer-ui'
    branch: 'PR-1147'
    commit: '9433ce8'
    role: java
    environment: prod
spec:
  selector:
    matchLabels:
      project: 'topologyviewer-ui'
      branch: 'PR-1147'
      role: java
      environment: prod
  replicas: 7
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        project: 'topologyviewer-ui'
        branch: 'PR-1147'
        commit: '9433ce8'
        role: java
        environment: prod
    spec:
      containers:
        - name: java-pr-1147
          image: 'nexusprod.corp.intranet:4567/topologyviewer/topologyviewer/topologyviewer-ui:PR-1147'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 4Gi
      imagePullSecrets:
        - name: topologyviewer-ui-pr-1147
---
---
